<resources>
    <string name="app_name">TrekGO</string>
    <string name="todo">TODO</string>
    <string name="_19">23</string>
    <string name="march">May</string>
    <string name="_17">21</string>
    <string name="march1">May</string>
    <string name="_20">24</string>
    <string name="_18">22</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="all">All</string>
    <string name="to_do">To do</string>
    <string name="in_progress">In Progress</string>
    <string name="ITP_assignment">ITP assignment group meeting</string>
    <string name="project_proposal">Project proposal discussion</string>
    <string name="_10_00_am">10:00 AM</string>
    <string name="done">Done</string>
    <string name="wire_frame">Wire frame design</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="coding_challange">Coding Challenge</string>
    <string name="implement_crud">Implementing CRUD in python</string>
    <string name="_2_00_pm">2:00 PM</string>
    <string name="Lectures">Lectures</string>
    <string name="DSA_Lecture">DSA Lecture in B501</string>
    <string name="_4_00_pm">4:30 PM</string>
    <string name="home">HOME</string>
    <string name="profile">PROFILE</string>
    <string name="calander">CALANDER</string>
    <string name="email">EMAIL</string>
    <string name="bg">BACKGROUNDIMG</string>
    <string name="settings">Settings</string>
    <string name="pp">PP</string>
    <string name="general_settings">General Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="off">Off</string>
    <string name="language">Language</string>
    <string name="permission">Permission</string>
    <string name="help_and_support">Help and support</string>
    <string name="hands">HANDS</string>
    <string name="shield">shield</string>
    <string name="logout">logout</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="profile0">Profile</string>
    <string name="log_out">Log out</string>
    <string name="membership">Membership</string>
    <string name="card">card</string>
    <string name="navibar">navibar</string>
    <string name="task_calander_chat">This productive tool is designed to help you better manage your task project-wise conveniently!</string>
    <string name="login">Login</string>
    <string name="icon">icon</string>
    <string name="your_today_s_task_almost_done">Your today\'s task almost done!</string>
    <string name="view_task">View Task</string>
    <string name="_60">60%</string>
    <string name="monthly_preview">Monthly Preview</string>
    <string name="completed">Completed</string>
    <string name="_08">08</string>
    <string name="_10">10</string>
    <string name="_05">05</string>
    <string name="ongoing_task">Ongoing task</string>
    <string name="pending_review">Pending Review</string>
    <string name="hello">Hello</string>
    <string name="have_a_nice_day">Have a nice day.</string>
    <string name="monday1">Tuesday</string>
    <string name="_10th_march">15th May</string>
    <string name="get_started">Get Started</string>
    <string name="logo">logo</string>
    <string name="add_project">Add Task</string>
    <string name="create_task">Create Task</string>
    <string name="project_name">Project Name</string>
    <string name="task_name">Task Name</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="bulding_better_workplaces">Bulding Better Workplaces</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="stay_organized_your_tasks_your_way">Stay organized : Your tasks, your way,</string>
    <string name="email0">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login0">Login</string>
    <string name="sign_in_with_google">Sign-in with Google</string>
    <string name="or">OR</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign-up</string>
    <string name="loginicon">loginicon</string>
    <string name="back">back</string>
    <string name="burgerbar">burgerBar</string>
    <string name="goback">back</string>
    <string name="mad_lab_byod_in_f1103">MAD LAB(BYOD) in F1103</string>
    <string name="_7_00_pm">7:00 PM</string>
    <string name="assignment">Assignment</string>
    <string name="mad_activity2_submission">MAD Activity2 submission</string>
    <string name="_9_00_pm">9:00 PM</string>
    <string name="trackgo">TrackGO</string>
    <string name="update_task">Update Task</string>

</resources>