<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="47dp"
        android:contentDescription="@string/bg"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        app:srcCompat="@drawable/top_background1"/>

    <View
        android:id="@+id/myView"
        android:layout_width="356dp"
        android:layout_height="199dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="39dp"
        android:background="@drawable/home_rectangle_box"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="175dp"
        android:layout_height="73dp"
        android:text="@string/your_today_s_task_almost_done"
        android:textAlignment="textStart"
        android:textColor="@color/darkBlue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/myView"
        app:layout_constraintEnd_toEndOf="@+id/myView"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="@+id/myView"
        app:layout_constraintTop_toTopOf="@+id/myView"
        app:layout_constraintVertical_bias="0.301" />

    <Button
        android:id="@+id/button3"
        android:layout_width="144dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/darkBlue"
        android:backgroundTintMode="screen"
        android:text="@string/view_task"
        android:textColor="@color/cream"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/myView"
        app:layout_constraintEnd_toEndOf="@+id/myView"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="@+id/myView"
        app:layout_constraintTop_toTopOf="@+id/myView"
        app:layout_constraintVertical_bias="0.842" />

    <View
        android:id="@+id/view2"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintBottom_toBottomOf="@+id/myView"
        app:layout_constraintEnd_toEndOf="@+id/myView"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="@+id/myView"
        app:layout_constraintTop_toTopOf="@+id/myView"
        app:layout_constraintVertical_bias="0.514" />

    <View
        android:id="@+id/view3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/circle_shape2"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="41dp"
        android:layout_height="26dp"
        android:text="@string/_60"
        android:textColor="@color/darkBlue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_preview"
        android:textColor="@color/darkBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/myView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/myView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />

    <View
        android:id="@+id/view5"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/home_monthly_progress_square1"
        app:layout_constraintBottom_toTopOf="@+id/view7"
        app:layout_constraintEnd_toStartOf="@+id/view4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="140dp"
        android:layout_height="142dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/home_monthly_progress_square2"
        app:layout_constraintBottom_toTopOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view5"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view6"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/home_monthly_progress_square4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <View
        android:id="@+id/view7"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/home_monthly_progress_square3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="44dp"
        android:layout_height="36dp"
        android:text="@string/_18"
        android:textColor="@color/lightBlue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5"
        app:layout_constraintVertical_bias="0.346" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/completed"
        android:textColor="@color/lightBlue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.148" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/_08"
        android:textColor="@color/darkBlue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_progress"
        android:textColor="@color/darkBlue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:textColor="@color/darkBlue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/view7"
        app:layout_constraintVertical_bias="0.452" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_05"
        android:textColor="@color/lightBlue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/view6"
        app:layout_constraintVertical_bias="0.442" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ongoing_task"
        android:textColor="@color/darkBlue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending_review"
        android:textColor="@color/lightBlue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="80dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="10dp"
        android:text="@string/hello"
        android:textColor="@color/darkBlue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="110dp"
        android:layout_height="36dp"
        android:layout_marginStart="84dp"
        android:textColor="@color/darkBlue"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="147dp"
        android:layout_height="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/have_a_nice_day"
        android:textColor="@color/darkBlue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/myView"
        app:layout_constraintEnd_toStartOf="@+id/textView19"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="61dp"
        android:layout_height="21dp"
        android:layout_marginTop="24dp"
        android:text="@string/monday1"
        android:textColor="@color/darkBlue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="104dp"
        android:layout_height="27dp"
        android:layout_marginBottom="28dp"
        android:text="@string/_10th_march"
        android:textColor="@color/darkBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/myView"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <View
        android:id="@+id/view10"
        android:layout_width="421dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/footer_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8"
        app:layout_constraintVertical_bias="0.85" />

    <View
        android:id="@+id/view12"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/AddTaskBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/footer_circle_shape"
        app:layout_constraintBottom_toBottomOf="@+id/view12"
        app:layout_constraintEnd_toEndOf="@+id/view12"
        app:layout_constraintStart_toStartOf="@+id/view12"
        app:layout_constraintTop_toTopOf="@+id/view12" />

    <View
        android:id="@+id/view8"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/plus_sign"
        app:layout_constraintBottom_toBottomOf="@+id/AddTaskBtn"
        app:layout_constraintEnd_toEndOf="@+id/AddTaskBtn"
        app:layout_constraintStart_toStartOf="@+id/AddTaskBtn"
        app:layout_constraintTop_toTopOf="@+id/AddTaskBtn" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="37dp"
        android:layout_height="46dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/pp"
        app:layout_constraintBottom_toBottomOf="@+id/view10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view10"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/profile" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="33dp"
        android:layout_height="34dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view12"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view10"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="32dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/calander"
        app:layout_constraintEnd_toStartOf="@+id/view12"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/view10"
        app:srcCompat="@drawable/calendar__1_" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/email"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toEndOf="@+id/view12"
        app:layout_constraintTop_toTopOf="@+id/view10"
        app:srcCompat="@drawable/email" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="49dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/navibar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="41dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left" />


</androidx.constraintlayout.widget.ConstraintLayout>
